@@ -59,6 +59,8 @@ somezoom_out_button=Zoom out
 somezoom_in_button=Zoom in
 productionmonitor_button=Production Statistics Monitor: \n[[font=default-semibold][color=128, 206, 240]Right-click[/color][/font]] Toggle Monitor \n[[font=default-semibold][color=128, 206, 240]Left-click[/color][/font]] Toggle Fluid Selection\n[[font=default-semibold][color=128, 206, 240]Click with item[/color][/font]] Add/overwrite item\n[[font=default-semibold][color=128, 206, 240]Left/right-click item[/color][/font]] Move Item up/down\n[[font=default-semibold][color=128, 206, 240]Shift + Click[/color][/font]] Delete item
 teleportation_redux_button=Teleporter Manager
+inserterthroughput_on_button=Display inserter throughput on hover\nCurrent: [font=default-semibold][color=128, 206, 240]ON[/color][/font]
+inserterthroughput_off_button=Display inserter throughput on hover\nCurrent: [font=default-semibold][color=128, 206, 240]OFF[/color][/font]
 
 [mod-setting-name]
 gu_frame_style_setting=Top frame style
