@@ -59,6 +59,8 @@ somezoom_out_button=Dézoomer
 somezoom_in_button=Zoomer
 productionmonitor_button=Moniteur de Production: \n[[font=default-semibold][color=128, 206, 240]Clic droit[/color][/font]] Moniteur \n[[font=default-semibold][color=128, 206, 240]Clic gauche[/color][/font]] Sélectionneur de fluide\n[[font=default-semibold][color=128, 206, 240]Clic avec objet[/color][/font]] Ajouter/remplacer objet\n[[font=default-semibold][color=128, 206, 240]Clic gauche/droit sur objet[/color][/font]] Déplacer objet vers le haut/bas\n[[font=default-semibold][color=128, 206, 240]Maj + Clic[/color][/font]] Supprimer objet
 teleportation_redux_button=Gestionnaire de Téléporteurs
+inserterthroughput_on_button=Montre le débit des inserteurs au vol de la souris\nActuellement: [font=default-semibold][color=128, 206, 240]ON[/color][/font]
+inserterthroughput_off_button=Montre le débit des inserteurs au vol de la souris\nActuellement: [font=default-semibold][color=128, 206, 240]OFF[/color][/font]
 
 [mod-setting-name]
 gu_frame_style_setting=Style de la fenêtre de boutons (haut-gauche)
